Fixes footer alignment in chrome

--- a/src/App.css
+++ b/src/App.css
@@ -10,12 +10,13 @@
 body {
   min-height: 100vh;
   min-width: 300px;
+  display: flex;
 }
 
 #root {
   background-color: #ffffff;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-flow: column;
 }
@@ -32,6 +33,10 @@ main > .pageWrapper {
   display: flex;
   width: 100%;
   justify-content: center;
+}
+
+.pageFiller {
+  height: stretch;  
 }
 
 footer {
